--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -244,13 +244,15 @@ Then I turned each of the bodies into components, at which point I copied and pa
 
 ##C. Tutorial Documentation
 
+Here is a [link](https://www.youtube.com/watch?v=vVFYrBClkPc) to the tutorial I followed (it's one of the ones linked in the assignment)
+
 <div class="row">
     <div class="col-sm-6">
 
       <p style="padding: 0 0em 2em 0;">
 
 Made a closed shape using the line function, learned to assign dimensions to shapes in a new way
-- by using the drop down menu/'d' shortcut as opposed to double clicking the line or using parameters
+- by using the drop down menu/'d' shortcut as opposed to double clicking the line or using parameters, and then also setting the angles in the angled line. 
 
 </p>
 
@@ -267,7 +269,10 @@ Made a closed shape using the line function, learned to assign dimensions to sha
 
       <p style="padding: 0 0em 2em 0;">
 
-Made circles and learned how to use the constraints- tangent, coincident
+Made circles and learned how to use the constraints, like tangent, coincident. 
+<br>
+  <br>
+I made the circles using the circle tool, also from the create drop down menu. And then I created the lines, waited utnil I saw the tangent symbol, and then selected both after selecting the coincident symbol and then went back in and deleted the lines that were not part of the outline of the shape. The result is the shape pictured to the right. 
 
 </p>
 
@@ -284,7 +289,7 @@ Made circles and learned how to use the constraints- tangent, coincident
 
       <p style="padding: 0 0em 2em 0;">
 
-Made ellipse, using the elipse tool in the 'create' drop down menu. 
+Made ellipse, using the elipse tool in the 'create' drop down menu. Then I selected the horizontal diameter, and then the vertical diameter. 
 
 </p>
 
@@ -295,7 +300,7 @@ Made ellipse, using the elipse tool in the 'create' drop down menu.
 
   </div>
   </div>
-
+This tutorial taught me a lot about new ways to approach the basics of sketching in fusion 360. 
 
 
 
