--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -251,7 +251,7 @@ Here is a [link](https://www.youtube.com/watch?v=vVFYrBClkPc) to the tutorial I 
 
       <p style="padding: 0 0em 2em 0;">
 
-Made a closed shape using the line function, learned to assign dimensions to shapes in a new way
+I made a closed shape using the line function, learned to assign dimensions to shapes in a new way
 - by using the drop down menu/'d' shortcut as opposed to double clicking the line or using parameters, and then also setting the angles in the angled line. 
 
 </p>
@@ -269,7 +269,7 @@ Made a closed shape using the line function, learned to assign dimensions to sha
 
       <p style="padding: 0 0em 2em 0;">
 
-Made circles and learned how to use the constraints, like tangent, coincident. 
+I made circles and learned how to use the constraints, like tangent, coincident. 
 <br>
   <br>
 I made the circles using the circle tool, also from the create drop down menu. And then I created the lines, waited utnil I saw the tangent symbol, and then selected both after selecting the coincident symbol and then went back in and deleted the lines that were not part of the outline of the shape. The result is the shape pictured to the right. 
@@ -287,9 +287,7 @@ I made the circles using the circle tool, also from the create drop down menu. A
  <div class="row">
     <div class="col-sm-6">
 
-      <p style="padding: 0 0em 2em 0;">
-
-Made ellipse, using the elipse tool in the 'create' drop down menu. Then I selected the horizontal diameter, and then the vertical diameter. 
+I made an ellipse, using the elipse tool in the 'create' drop down menu. Then I selected the horizontal diameter, and then the vertical diameter. 
 
 </p>
 
