linking to within the page?

--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -14,8 +14,12 @@
   [home](../index.html)
 
 # Week 2: 2D Design and Cutting
+<a href="#IPartA">Part A</a>
 
+
+<a id="PartA">
 ## A. Parametric Press-Fit Design: 
+</a>
 
 <div class="row">
 
