--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -14,7 +14,10 @@
   [home](../index.html)
 
 # Week 2: 2D Design and Cutting
-<a href="#IPartA">Part A</a>
+<a href="#IPartA">Part A: The Making of the Parametric Hexagons</a>
+<a href="#IPartB">Part B: Modelling Household Items</a>
+<a href="#FinalProduct">Final Product</a>
+<a href="#IPartC">Part C: Documentation of Fusion Tutorial</a>
 
 
 <a id="PartA">
@@ -165,7 +168,10 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
   <div class="row">
 
-  Final Cut: <br>
+<a id="FinalProduct">
+  Final Cut:
+<a/>
+  <br>
   <br>
 
   I printed the same shapes as the second cut, ending up with 10 total hexagons. 
@@ -189,7 +195,9 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
   -------
 
+<a id="PartB">
 ##B. Modelling Household Items
+</a>
 
 <div class="row">
     <div class="col-sm-6">
@@ -245,8 +253,9 @@ Then I turned each of the bodies into components, at which point I copied and pa
 
 -------
 
-
+<a id="PartC">
 ##C. Tutorial Documentation
+<a/>
 
 Here is a [link](https://www.youtube.com/watch?v=vVFYrBClkPc) to the tutorial I followed (it's one of the ones linked in the assignment)
 
