--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -14,9 +14,13 @@
   [home](../index.html)
 
 # Week 2: 2D Design and Cutting
+Outline: 
 <a href="#IPartA">Part A: The Making of the Parametric Hexagons</a>
+<br><br>
 <a href="#IPartB">Part B: Modelling Household Items</a>
+<br><br>
 <a href="#FinalProduct">Final Product</a>
+<br><br>
 <a href="#IPartC">Part C: Documentation of Fusion Tutorial</a>
 
 
