--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -17,13 +17,13 @@
 <br><br>
 Outline: 
 <br><br>
-<a href="#IPartA">Part A: The Making of the Parametric Hexagons</a>
+<a href="#PartA">Part A: The Making of the Parametric Hexagons</a>
 <br><br>
-<a href="#IPartB">Part B: Modelling Household Items</a>
+<a href="#PartB">Part B: Modelling Household Items</a>
 <br><br>
 <a href="#FinalProduct">Final Product</a>
 <br><br>
-<a href="#IPartC">Part C: Documentation of Fusion Tutorial</a>
+<a href="#PartC">Part C: Documentation of Fusion Tutorial</a>
 
 
 <a id="PartA">
