--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -285,7 +285,7 @@ I made a closed shape using the line function, learned to assign dimensions to s
 
       <p style="padding: 0 0em 2em 0;">
 
-I made circles and learned how to use the constraints, like tangent, coincident. 
+I made circles and learned how to use the constraints, like tangent and coincident. 
 <br>
   <br>
 I made the circles using the circle tool, also from the create drop down menu. And then I created the lines, waited utnil I saw the tangent symbol, and then selected both after selecting the coincident symbol and then went back in and deleted the lines that were not part of the outline of the shape. The result is the shape pictured to the right. 
