--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -195,6 +195,7 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
 
   </div>
   
+  Here is the link to the hexagons: [hexagon models](https://a360.co/3y2H5L6)
 
   -------
 
@@ -215,7 +216,10 @@ I chose the eraser because it is a constant in any workspace and can be effectiv
 I intitially created a rectangular sketch, and then used filets of varying sides on either end to match the dimensions of my eraser.
 <br>
   <br>
-To the right are the eraser I was modeling and the model I created, including the parameters (measurements done of the eraser with calipers). </p>
+To the right are the eraser I was modeling and the model I created, including the parameters (measurements done of the eraser with calipers).
+
+Here is the link to the eraser: [eraser model](https://a360.co/3u82d1h)
+ </p>
  </div>
 
 <div class="col-sm-6">
@@ -245,7 +249,10 @@ In making it, I created each cyllindrical section individually and used the 'cre
 Then I turned each of the bodies into components, at which point I copied and pasted them into a new file and assembled them, as you see in the final image. 
 <br>
   <br>
-  To the right is the image of the model gluestick and the actual gluestick. </p>
+  To the right is the image of the model gluestick and the actual gluestick. 
+
+Here is the link to the gluestick: [gluestick model](https://a360.co/3QWiwrV)
+</p>
    </div>
 
 <div class="col-sm-6">
