--- a/02_2D_Design_and_Cutting/index.html
+++ b/02_2D_Design_and_Cutting/index.html
@@ -126,7 +126,7 @@ So, I changed the thickness of the piece and (attempted to) adjusted the notch l
   First Cut: <br>
   <br>
 
-  The first cut was mostly a sucess, with my kerf measurements ending up being suprisingly accurate! About a milimeter was an accurate prediction, which I verified. 
+  The first cut was mostly a success, with my kerf measurements ending up being suprisingly accurate! About a milimeter was an accurate prediction, which I verified. 
   <br>
   <br>
   As predicted, the notches were too long and so I traced around to find the ideal length. Then I changed the length in my original file and got ready to recut!
