--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ li a:hover:not(.active) {
 <ul>
   <li><a class="active"
   <li><PHYS-S-12: Intro to Digital Fabrication: Abi Adam
- href="#home">Home</a></li>
+ href="../index.html">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="../About_Me/index.html">About</a></li>
 </ul>
 
 <div style="padding:20px;margin-top:30px;background-color:#FEFEFE;height:1500px;">
