--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -14,7 +14,66 @@
 
   ### Week 3: Electronics and Tools
 
-  Here is an image: 
+##Idea and Initial Sketches: 
+
+My idea was to create a model of our solar system that would be turned by a motor, creating rotation about the central circle, which would represent the sun. 
+
+Here are the sketches I made of the overall system and its individual components: 
+
+IMAGES
+
+##Fusion 360- Making the 3D Models:
+
+I made each of these models through a combination of sketching, using constraints (mainly the ‘equal’ constraint), the mirror pattern, and parametarizing the sketches. 
+
+Here are sketches of each component, followed by their extruded versions. 
+
+I made them press-fit to ensure stability. 
+
+Note that there is only one orbit and only one planet, as I utilized the parameters to change them between cuts to avoid having to make multiple different versions of what is in effect the same object. 
+
+SKETCHES– in folder labeled ‘sketchesW3’
+
+##Cuts: 
+
+I cut all of the pieces over the course of the lab session. 
+
+Here are the images of the pieces: 
+
+IMAGES
+
+##Assembly: 
+
+I used hot glue to assemble the column for the sun and to attach the sun to the column, as well as to attach the column and the base for the motor. I connected the concentric circles of the orbits to each other by sliding a thin metal rod through the natural groves in the cardboard. Once I discovered the ideal size for the rod, I removed it from the orbits and cut it using the hacksaw. Then I replaced the orbits onto the rod and hot glued it into pre-prepared groves in the tops of the sun column. 
+
+Here are images from various stages of the process: 
+
+IMAGES
+
+##Soldering/Circutry:
+
+I used the motor and wires that I soldered on the 28th in class to power my solar system. To finally power it, I used both the power source provided and the arduino. 
+
+##Final Result + Videos:
+
+Here is the final result, represented both by static images and two videos. 
+
+IMAGES and VIDEOS
+
+##Multimeter and Ohm’s Law: 
+
+I used the multimeter to measure both voltage and resistance, as pictured below. Then I applied Ohm’s law to calculate the current in my circuit. 
+
+IMAGES OF THE MEASUREMENTS
+
+PROCESS IMAGE FROM NOTABILITY
+
+ 
+
+
+ 
+
+ 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
