--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -65,19 +65,12 @@ IMAGES and VIDEOS
 I used the multimeter to measure both voltage and resistance, as pictured below. Then I applied Ohm’s law to calculate the current in my circuit. 
 
 IMAGES OF THE MEASUREMENTS
+![Measuring Voltage with Multimeter](./IMG_5755.jpeg)
+![Measuring Resistance with Multimeter](./IMG_5754.jpeg)
 
-PROCESS IMAGE FROM NOTABILITY
+![Calculations Ohm's Law](./Ohms_Law_Process.jpeg)
 
- 
-
-
- 
-
- 
-
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a	[link](../index.html).
+And here is a	[link](../index.html).
 
 
 
