--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -12,7 +12,29 @@
 
 
 
-  ### Week 3: Electronics and Tools
+# Week 3: Electronics and Tools
+
+<br><br>
+Outline: 
+<br><br>
+<a href="#A">Idea and Initial Sketches</a>
+<br><br>
+<a href="#B">Fusion 360- Making the 3D Models</a>
+<br><br>
+<a href="#C">Cuts</a>
+<br><br>
+<a href="#D">Assembling</a>
+<br><br>
+<a href="#E">Soldering/Circutry</a>
+<br><br>
+<a href="#F">Final Result + Videos</a>
+<br><br>
+<a href="#G">Multimeter and Ohm's Law</a>
+<br><br>
+[home](../index.html)
+
+
+<a id="A">
 
 ##Idea and Initial Sketches: 
 
@@ -22,6 +44,7 @@ Here are the sketches I made of the overall system and its individual components
 
 IMAGES
 
+<a id="B">
 ##Fusion 360- Making the 3D Models:
 
 I made each of these models through a combination of sketching, using constraints (mainly the ‘equal’ constraint), the mirror pattern, and parametarizing the sketches. 
@@ -34,6 +57,7 @@ Note that there is only one orbit and only one planet, as I utilized the paramet
 
 SKETCHES– in folder labeled ‘sketchesW3’
 
+<a id="C">
 ##Cuts: 
 
 I cut all of the pieces over the course of the lab session. 
@@ -42,6 +66,7 @@ Here are the images of the pieces:
 
 IMAGES
 
+<a id="D">
 ##Assembly: 
 
 I used hot glue to assemble the column for the sun and to attach the sun to the column, as well as to attach the column and the base for the motor. I connected the concentric circles of the orbits to each other by sliding a thin metal rod through the natural groves in the cardboard. Once I discovered the ideal size for the rod, I removed it from the orbits and cut it using the hacksaw. Then I replaced the orbits onto the rod and hot glued it into pre-prepared groves in the tops of the sun column. 
@@ -50,16 +75,19 @@ Here are images from various stages of the process:
 
 IMAGES
 
+<a id="E">
 ##Soldering/Circutry:
 
 I used the motor and wires that I soldered on the 28th in class to power my solar system. To finally power it, I used both the power source provided and the arduino. 
 
+<a id="F">
 ##Final Result + Videos:
 
 Here is the final result, represented both by static images and two videos. 
 
 IMAGES and VIDEOS
 
+<a id="G">
 ##Multimeter and Ohm’s Law: 
 
 I used the multimeter to measure both voltage and resistance, as pictured below. Then I applied Ohm’s law to calculate the current in my circuit. 
