--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -43,7 +43,7 @@ My idea was to create a model of our solar system that would be turned by a moto
 Here are the sketches I made of the overall system and its individual components: 
 
 <img src="MotorSketch.jpeg" alt="motor sketch" style="width:250px;height:250px;">
-<img src="MotorSketch.jpeg" alt="motor sketch" style="width:313px;height:250px;">
+<img src="Motor3D.jpeg" alt="motor 3D" style="width:313px;height:250px;">
 
 <a id="B">
 ##Fusion 360- Making the 3D Models:
