--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -42,8 +42,6 @@ My idea was to create a model of our solar system that would be turned by a moto
 
 Here are the sketches I made of the overall system and its individual components: 
 
-<img src="MotorSketch.jpeg" alt="motor sketch" style="width:250px;height:250px;">
-<img src="Motor3D.jpeg" alt="motor 3D" style="width:313px;height:250px;">
 
 <a id="B">
 ##Fusion 360- Making the 3D Models:
@@ -56,7 +54,10 @@ I made them press-fit to ensure stability.
 
 Note that there is only one orbit and only one planet, as I utilized the parameters to change them between cuts to avoid having to make multiple different versions of what is in effect the same object. 
 
-SKETCHES– in folder labeled ‘sketchesW3’
+<img src="MotorSketch.jpeg" alt="motor sketch" style="width:250px;height:250px;">
+<img src="Motor3D.jpeg" alt="motor 3D" style="width:313px;height:250px;">
+<img src="SunColumnSketch.jpeg" alt="sun column" style="width:262px;height:250px;">
+
 
 <a id="C">
 ##Cuts: 
