--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -54,10 +54,12 @@ I made them press-fit to ensure stability.
 
 Note that there is only one orbit and only one planet, as I utilized the parameters to change them between cuts to avoid having to make multiple different versions of what is in effect the same object. 
 
-<img src="MotorSketch.jpeg" alt="motor sketch" style="width:250px;height:250px;">
-<img src="Motor3D.jpeg" alt="motor 3D" style="width:313px;height:250px;">
-<img src="SunColumnSketch.jpeg" alt="sun column" style="width:262px;height:250px;">
 
+<img src="Motor3D.jpeg" alt="motor 3D" style="width:313px;height:250px;">
+<img src="SunColumn.jpeg" alt="sun column" style="width:377px;height:250px;">
+<img src="Orbit.jpeg" alt="orbit" style="width:377px;height:250px;">
+<img src="Planet.jpeg" alt="planet" style="width:377px;height:250px;">
+<img src="Sun.jpeg" alt="sun" style="width:377px;height:250px;">
 
 <a id="C">
 ##Cuts: 
