--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -21,9 +21,7 @@ Outline:
 <br><br>
 <a href="#B">Fusion 360- Making the 3D Models</a>
 <br><br>
-<a href="#C">Cuts</a>
-<br><br>
-<a href="#D">Assembling</a>
+<a href="#D">Assembly</a>
 <br><br>
 <a href="#E">Soldering/Circutry</a>
 <br><br>
@@ -61,15 +59,6 @@ Note that there is only one orbit and only one planet, as I utilized the paramet
 <img src="Planet.jpeg" alt="planet" style="width:377px;height:250px;">
 <img src="Sun.jpeg" alt="sun" style="width:377px;height:250px;">
 
-<a id="C">
-##Cuts: 
-
-I cut all of the pieces over the course of the lab session. 
-
-Here are the images of the pieces: 
-
-IMAGES
-
 <a id="D">
 ##Assembly: 
 
@@ -77,7 +66,10 @@ I used hot glue to assemble the column for the sun and to attach the sun to the 
 
 Here are images from various stages of the process: 
 
-IMAGES
+<img src="IMG_5714.jpeg" alt="Platform, wheel, and motor" style="width:186.22px;height:250px;">
+<img src="IMG_5720.jpeg" alt="Sun, column, platform, wheel, motor" style="width:333px;height:250px;">
+<img src="IMG_5719.jpeg" alt="Planets, orbits, metal rod" style="width:332px;height:250px;">
+
 
 <a id="E">
 ##Soldering/Circutry:
