--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -69,6 +69,7 @@ Here are images from various stages of the process:
 <img src="IMG_5714.jpeg" alt="Platform, wheel, and motor" style="width:186.22px;height:250px;">
 <img src="IMG_5720.jpeg" alt="Sun, column, platform, wheel, motor" style="width:333px;height:250px;">
 <img src="IMG_5719.jpeg" alt="Planets, orbits, metal rod" style="width:332px;height:250px;">
+<img src="IMG_5732-1.jpeg" alt="Assembled Version" style="width:188px;height:250px;">
 
 
 <a id="E">
