--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -83,7 +83,7 @@ I used the motor and wires that I soldered on the 28th in class to power my sola
 Here is the final result, represented both by static images and two videos. 
 
 <video controls>
-<source src="2e6b3c60-e1d9-46d1-9e57-957d13446fd8-0-3e13fe21-ff9d-4a2d-9c32-b34829af1de0.mp4" type="video/mp4" alt="Video 1, White Background" style="width:131px;height:250px;">>
+<source src="2e6b3c60-e1d9-46d1-9e57-957d13446fd8-0-3e13fe21-ff9d-4a2d-9c32-b34829af1de0.mp4" type="video/mp4" alt="Video 1, White Background" style="width:131px;height:250px;">
 </video>
 
 <video controls>
