--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -83,7 +83,7 @@ I used the motor and wires that I soldered on the 28th in class to power my sola
 Here is the final result, represented both by static images and two videos. 
 
 <video controls>
-<source src="2e6b3c60-e1d9-46d1-9e57-957d13446fd8-0-3e13fe21-ff9d-4a2d-9c32-b34829af1de0.mp4" type="video/mp4" alt="Video 1, White Background" style="width:131px;height:250px;">
+<source src="2e6b3c60-e1d9-46d1-9e57-957d13446fd8-0-3e13fe21-ff9d-4a2d-9c32-b34829af1de0.mp4" type="video/mp4">
 </video>
 
 <video controls>
@@ -95,9 +95,8 @@ Here is the final result, represented both by static images and two videos.
 
 I used the multimeter to measure both voltage and resistance, as pictured below. Then I applied Ohm’s law to calculate the current in my circuit. 
 
-IMAGES OF THE MEASUREMENTS
-![Measuring Voltage with Multimeter](./IMG_5755.jpeg)
-![Measuring Resistance with Multimeter](./IMG_5754.jpeg)
+<img src="IMG_5755.jpeg" alt="Measuring Voltage with Multimeter" style="width:141px;height:250px;">
+<img src="IMG_5754.jpeg" alt="Measuring Resistance with Multimeter" style="width:481px;height:250px;">
 
 ![Calculations Ohm's Law](./Ohms_Law_Process.jpeg)
 
