--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -96,9 +96,9 @@ Here is the final result, represented both by static images and two videos.
 I used the multimeter to measure both voltage and resistance, as pictured below. Then I applied Ohm’s law to calculate the current in my circuit. 
 
 <img src="IMG_5755.jpeg" alt="Measuring Voltage with Multimeter" style="width:141px;height:250px;">
-<img src="IMG_5754.jpeg" alt="Measuring Resistance with Multimeter" style="width:481px;height:250px;">
+<img src="IMG_5754.jpeg" alt="Measuring Resistance with Multimeter" style="width:141px;height:250px;">
+<img src="Ohms_Law_Process.jpeg" alt="Calculations Ohm's Law" style="width:481px;height:250px;">
 
-![Calculations Ohm's Law](./Ohms_Law_Process.jpeg)
 
 And here is a	[link](../index.html).
 
