--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -40,6 +40,9 @@ My idea was to create a model of our solar system that would be turned by a moto
 
 Here are the sketches I made of the overall system and its individual components: 
 
+<img src="OverheadSchematic.jpeg" alt="overhead sketch" style="width:250px;height:250px;">
+<img src="OverheadSchematic.jpeg" alt="overhead sketch" style="width:723px;height:250px;">
+
 
 <a id="B">
 ##Fusion 360- Making the 3D Models:
