--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -38,6 +38,8 @@ Outline:
 
 My idea was to create a model of our solar system that would be turned by a motor, creating rotation about the central circle, which would represent the sun. 
 
+Note that the final version does not resemble the sketches- this is because I ended up not having enough time to execute the initial idea with all the planets on their own individual orbits. As such, I modified my design on the fly and ended up creating the final product shown below. 
+
 Here are the sketches I made of the overall system and its individual components: 
 
 <img src="OverheadSchematic.jpeg" alt="overhead sketch" style="width:250px;height:250px;">
@@ -65,7 +67,7 @@ Note that there is only one orbit and only one planet, as I utilized the paramet
 <a id="D">
 ##Assembly: 
 
-I used hot glue to assemble the column for the sun and to attach the sun to the column, as well as to attach the column and the base for the motor. I connected the concentric circles of the orbits to each other by sliding a thin metal rod through the natural groves in the cardboard. Once I discovered the ideal size for the rod, I removed it from the orbits and cut it using the hacksaw. Then I replaced the orbits onto the rod and hot glued it into pre-prepared groves in the tops of the sun column. 
+I used hot glue to assemble the column for the sun and to attach the sun to the column, as well as to attach the column and the base for the motor. I connected the concentric circles of the orbits to each other by sliding a thin metal rod through the natural groves in the cardboard. Once I discovered the ideal size for the rod, I removed it from the orbits and cut it using the hacksaw. Then I replaced the orbits onto the rod and hot glued it into pre-prepared groves in the tops of the sun column.  
 
 Here are images from various stages of the process: 
 
