--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -23,7 +23,7 @@ Outline:
 <br><br>
 <a href="#D">Assembly</a>
 <br><br>
-<a href="#E">Soldering/Circutry</a>
+<a href="#E">Soldering/Circuitry</a>
 <br><br>
 <a href="#F">Final Result + Videos</a>
 <br><br>
@@ -78,7 +78,7 @@ Here are images from various stages of the process:
 
 
 <a id="E">
-##Soldering/Circutry:
+##Soldering/Circuitry:
 
 I used the motor and wires that I soldered on the 28th in class to power my solar system. To finally power it, I used both the power source provided and the arduino. 
 
