--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -87,11 +87,11 @@ I used the motor and wires that I soldered on the 28th in class to power my sola
 
 Here is the final result, represented both by static images and two videos. 
 
-<video controls>
+<video width="262" height="500" controls>
 <source src="2e6b3c60-e1d9-46d1-9e57-957d13446fd8-0-3e13fe21-ff9d-4a2d-9c32-b34829af1de0.mp4" type="video/mp4">
 </video>
 
-<video controls>
+<video width="262" height="500" controls>
 <source src="4ff02486-e18f-49fd-b766-e0eea5fee697-0-306742b5-0817-4ce4-b8ca-0abe61e29845.mp4" type="video/mp4">
 </video>
 
