--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -64,6 +64,13 @@ Note that there is only one orbit and only one planet, as I utilized the paramet
 <img src="Planet.jpeg" alt="planet" style="width:377px;height:250px;">
 <img src="Sun.jpeg" alt="sun" style="width:377px;height:250px;">
 
+Here are the links to the DXF files used for this project: 
+[Sun column/support structure](https://a360.co/3ytHJCx).
+[Sun](https://a360.co/3ONOxjZ).
+[Orbit](https://a360.co/3ywuQHS).
+[Planet](https://a360.co/3QYan6k).
+[Motor casing](https://a360.co/3no89j3).
+
 <a id="D">
 ##Assembly: 
 
@@ -103,9 +110,6 @@ I used the multimeter to measure both voltage and resistance, as pictured below.
 <img src="IMG_5755.jpeg" alt="Measuring Voltage with Multimeter" style="width:141px;height:250px;">
 <img src="IMG_5754.jpeg" alt="Measuring Resistance with Multimeter" style="width:141px;height:250px;">
 <img src="Ohms_Law_Process.jpeg" alt="Calculations Ohm's Law" style="width:480px;height:250px;">
-
-
-And here is a	[link](../index.html).
 
 
 
