--- a/03_Electronics_and_Tools/index.html
+++ b/03_Electronics_and_Tools/index.html
@@ -64,17 +64,18 @@ Note that there is only one orbit and only one planet, as I utilized the paramet
 <img src="Planet.jpeg" alt="planet" style="width:377px;height:250px;">
 <img src="Sun.jpeg" alt="sun" style="width:377px;height:250px;">
 
-Here are the links to the DXF files used for this project: 
+Here are the links to the DXF files used for this project:
+
 <br><br>
-[Sun column/support structure](https://a360.co/3ytHJCx).
+- [Sun column/support structure](https://a360.co/3ytHJCx)
 <br><br>
-[Sun](https://a360.co/3ONOxjZ).
+- [Sun](https://a360.co/3ONOxjZ)
 <br><br>
-[Orbit](https://a360.co/3ywuQHS).
+- [Orbit](https://a360.co/3ywuQHS)
 <br><br>
-[Planet](https://a360.co/3QYan6k).
+- [Planet](https://a360.co/3QYan6k)
 <br><br>
-[Motor casing](https://a360.co/3no89j3).
+- [Motor casing](https://a360.co/3no89j3)
 
 <a id="D">
 ##Assembly: 
