--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -21,8 +21,8 @@
 
 ##Goal: 
 
-To write code that would accomplish the following: 
-- turn on the system's motion with a button 
+To write code that would accomplish the following: <br>
+- turn on the system's motion with a button <br>
 - control the speed of the system with a potentiometer
  
 ##Circuit: 
