--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -35,6 +35,12 @@ Here is my schematic:
 
 Here are pictures of the circuit from a variety of angles: 
 
+<img src="IMG_5854.jpeg" alt="Uno pic" style="width:331px;height:250px;">
+<img src="IMG_5856.jpeg" alt="Motor controller pic" style="width:331px;height:250px;">
+<img src="IMG_5855.jpeg" alt="Breadboard pic" style="width:331px;height:250px;">
+<img src="IMG_5852.jpeg" alt="Whole Circuit" style="width:331px;height:250px;">
+<img src="IMG_5853.jpeg" alt="Side view" style="width:331px;height:250px;">
+
 ##Code: 
 
 My code is made out of the potentiometer code from the class website, the button code, and contains modifications I made to link the two together. 
@@ -98,7 +104,9 @@ void loop() {
 
   And here is a	[link](../index.html).
 
-
+<video width="262" height="500" controls>
+<source src="deae3d27-7f0c-4f06-9cc2-96a3989e341e-0-ccfaa41e-0947-4dea-986f-a9634aa81698" type="video/mp4">
+</video>
 
 </xmp>
 </body>
