--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -40,6 +40,7 @@ Here are pictures of the circuit from a variety of angles:
 <img src="IMG_5855.jpeg" alt="Breadboard pic" style="width:331px;height:250px;">
 <img src="IMG_5852.jpeg" alt="Whole Circuit" style="width:331px;height:250px;">
 <img src="IMG_5853.jpeg" alt="Side view" style="width:331px;height:250px;">
+<img src="IMG_5849.jpeg" alt="Whole-side view" style="width:331px;height:250px;">
 
 ##Code: 
 
