--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -105,7 +105,7 @@ void loop() {
 ##Final: 
 
 Here is a video of the final effect: 
-<video width="262" height="500" controls>
+<video controls>
 <source src="deae3d27-7f0c-4f06-9cc2-96a3989e341e-0-ccfaa41e-0947-4dea-986f-a9634aa81698" type="video/mp4">
 </video>
 
