changing video dimensions

--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -105,7 +105,7 @@ void loop() {
 ##Final: 
 
 Here is a video of the final effect: 
-<video controls>
+<video width="262" height="500" controls>
 <source src="84395e55-b8f0-453f-b4ce-c3f35b7d897a-0-7cc0d6ba-b343-4fc6-bfea-bf02d912959d.mp4" type="video/mp4">
 </video>
 
