--- a/04_Microcontroller_Programming/index.html
+++ b/04_Microcontroller_Programming/index.html
@@ -19,12 +19,29 @@
 
 # Week 4: Microcontroller Programming
 
+Outline: 
+<br><br>
+<a href="#A">Goal</a>
+<br><br>
+<a href="#B">Circuit</a>
+<br><br>
+<a href="#D">Code</a>
+<br><br>
+<a href="#E">Final</a>
+<br><br>
+[Home](../index.html)
+
+
+<a id="A">
+
 ##Goal: 
 
 To write code that would accomplish the following: <br>
 - turn on the system's motion with a button <br>
 - control the speed of the system with a potentiometer
- 
+
+<a id="B"> 
+
 ##Circuit: 
 
 I got inspiration from the potentiometer example from class and the tutorial from this [website](https://roboticsbackend.com/arduino-led-push-button-potentiometer/). Note that I made some changes because their version was for controlling an LED, and I was controlling the motion of my kinetic sculpture. 
@@ -41,6 +58,8 @@ Here are pictures of the circuit from a variety of angles:
 <img src="IMG_5852.jpeg" alt="Whole Circuit" style="width:331px;height:250px;">
 <img src="IMG_5853.jpeg" alt="Side view" style="width:331px;height:250px;">
 <img src="IMG_5849.jpeg" alt="Whole-side view" style="width:331px;height:250px;">
+
+<a id="C">
 
 ##Code: 
 
@@ -101,6 +120,7 @@ void loop() {
 }
 </code></pre> 
 
+<a id="D">
 
 ##Final: 
 
