--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -24,6 +24,8 @@
 
   ![Sketch of new idea](./NewIdeaDrawing.jpg)
 
+#Project Plan: 
+
    It would utilize an Arduino and breadboarding, as well as code likely executed in the Arduino IDE (instead of matlab, as we've been using that method for coding in class). This project is basically a more complex version of a more rudimentary project I created last year that follows the same concept (a musical instrument operated based on the varied detection of light/heat from disparate sources). 
 
    *NEW* Upon further investigation, I've decided to switch to a pressure operated system. The idea of using brightness or heat just present a whole host of difficulties, such as ambient heat and light, and the difficulty that playing any actual music would require keeping the fingers above the sensors and thus they would be perpetually activated. Pressure avoids many of these issues as the user would have to come into contact with the instrument to make noise, and would eliminate the issue of ambient signals confusing the device. The design would stay much the same despite this change. 
@@ -34,7 +36,8 @@
   ![image of initial version](./CompSciFST2021.jpg)
 
 
-Bill of Materials: 
+#Bill of Materials: 
+
 - 3D printer filament (as I still intend on printing the casing for the ciruitry, and the arrows to place on the buttons)
 - Pressure sensors - I'm not sure about what type we have, but it must have the ability to take in 8 different inputs 
 - Many wires
@@ -44,7 +47,8 @@ Bill of Materials:
 - 2 Buttons
 - A speaker/piezo buzzer 
 
-Timeline: 
+#Timeline: 
+
 - Assemble smaller versions of the circuit and write sections of code for proof of concept 
   - make use of existing pressure sensor code and modify it, also begin with the small breadboard before scaling up 
 - Write overall psuedocode, draw circuit diagram 
