--- a/13_Final_Project/index.html
+++ b/13_Final_Project/index.html
@@ -14,9 +14,9 @@
 
   ### Week 13: Final Project
 
-  For my final project I am considering the following ideas: 
+  
 
-  ## 1. Light/heat operated musical instrument
+  ## Pressure operated musical instrument
 
   A musical instrument built using photoresistors/thermistors to detect the location of the user's fingers, allowing them to play varied notes without needing to touch an instrument. They would be able to play chords and varying intensities of the notes. The instrument would also be able to change octaves and have a display to show the user what chord/note they are playing. 
 
