adding links to w.5

--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -14,7 +14,7 @@
 
   ### Week 5: 3D Design and Printing
 
-  Here is an image: 
+  To view my updated plans for the final project click [here](../05_3D_Design_and_Printing/index.html).
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
