--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -12,9 +12,43 @@
 
 
 
-  ### Week 5: 3D Design and Printing
+# Week 5: 3D Design and Printing
 
-  To view my updated plans for the final project click [here](../05_3D_Design_and_Printing/index.html).
+Outline: 
+
+Print (Final Project Casing Prototype)
+Photogrammetry 
+[Link to updated final project proposal](../13_Final_Project/index.html).
+
+
+##Print: 
+
+###Process of creation: 
+
+Made a sketch of a rectangle with eight holes in it, then extruded, then extruded another rectangle within that rectangle to create a cut out area inside.  
+
+Combined them all into one component, export, slice, and make smaller for size and time reasons, added a brim.  
+
+###Here are all the files for this print: 
+[Fusion link]
+[STL file]<a download href='./path_to_file.stl'>Download my STL file <\a>
+[Gcode file] 
+
+Print: 
+Results:
+-images  
+Lessons: 
+
+
+
+
+Scandy:
+
+https://www.scandy.co/apps/scandy-pro
+
+
+
+ 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
